# murthy-bench

./: .gitignore  README.md  SETUP.md  one_pager.tex  pyproject.toml
.github/workflows/: publish.yml
MoleFi/: MoleFi.md
data/raw/RMEfetch/: csv.csv  enzymes_with_sequences_and_diseases.csv  fetch_sequences.py
docs/: one_pager_letter.tex
docs/superpowers/plans/: 2026-05-23-disease2vector.md
docs/superpowers/specs/: 2026-05-23-disease2vector-design.md  2026-05-23-disease2vector-literature-backing.md
longivity_hack/: .env.example  .gitignore  =3.0.0  CLAUDE.md  Track01-LongivityLLM.md  benchmark_models.py  benchmark_summary_20260523_163346.csv  cli.py  devlog.md  fetch_models.py  hf_llm_models.csv  idea.md  model_selector.py  requirements.txt  results.jsonl
longivity_hack/benchmark/: chat.py  client.py  config.py  loader.py  model_manager.py  results.py  runner.py
murthy_bench.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
prompts/: EP-01_binary.jsonl  EP-02_ternary.jsonl  EP-03_multiclass.jsonl
sae_rl/: .gitignore  requirements.txt
sae_rl/.claude/: settings.local.json
sae_rl/scripts/: 01_prepare_data.py  01b_prepare_sft_data.py  02_sft_qwen.sh  02b_merge_lora.py  03_ppo_qwen.sh  04_collect_activations.py  05_train_sae.py  06_analyze_features.py  run_all.sh
scripts/: build_rna100.py  build_standard200.py  crop_images.py  export_hackathon.py  split_standard200.py  step1_build_rnadisease_tasks.py  step2_build_rmdisease_task.py  step3_run_llm_eval.py  step4_score_and_analyze.py
(+11 files in other folders)
