[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "murthy-bench"
version = "0.2.0"
description = "Longevity LLM benchmark CLI — Estimathon-style evaluation for aging-biology tasks"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["longevity", "benchmark", "llm", "aging", "estimathon"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.25.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
longebench = ["datasets>=2.0.0"]
all = ["datasets>=2.0.0"]

[project.scripts]
murthy       = "longivity_hack.cli:entry"
murthy-bench = "longivity_hack.cli:entry"

[project.urls]
Repository = "https://github.com/OhhMoo/Murphy-Health"

[tool.setuptools.packages.find]
where   = ["."]
include = ["longivity_hack*"]
